Normalize round function (ESQL-872)
This brings the `round` function in line with our new "standards" around
scalar functions, implementing `Mappable` and testing it with
`AbstractScalarFunctionTestCase`.